# db_migrations

./: README.md  alembic.ini  connect_db.py  create.py  crud.py  delete.py  fill_up_tables.py  logger.py  main.py  models.py  pyproject.toml  read.py  select_data.py  tables_delete.py  tables_fill_up.py  update.py
db_alembic/versions/: 07f98041587e_teacher_fullname_unique_true.py  35c66408248f_date_column_date_nullable_false.py  404e8af4ba94_groups_name_groups_number.py  538f178d0dd0_date_today_strftime_d_m_y.py  7024d130f39a_added_relationships.py  74f5ca1067f6_default_date_today.py  79a12011bdd0_removed_strftime.py  c8042e592b72_added_marks_f_keys.py  d1b075214fa8_created_tables.py  d8cd59a925c3_date_column_date_nullable_false.py  e36c0178bece_datetime_date.py  ea9f65b2081b_initial_revision.py  edde3de1672b_added_unique_fileds.py
